cc_library(
    name = "cmd",
    srcs = [
        "clear.cpp",
        "exec.cpp",
        "login.cpp",
        "service.cpp",
        "start.cpp",
        "version.cpp",
        "//synnax/pkg/version",
    ],
    hdrs = ["cmd.h"],
    copts = select({
        # "@platforms//os:windows": [
        #    "/fsanitize=address",  # Enable AddressSanitizer for heap debugging
        #     "/ZI",                # Debug info
        #     "/DEBUG",             # Enable debug info
        #     "/MDd",               # Debug runtime
        #     "-std:c++20",
        # ],
        "//conditions:default": [
        ],
    }),
    linkopts = select({
        "@platforms//os:windows": [
            "/DEFAULTLIB:ws2_32.lib",
            "/DEFAULTLIB:iphlpapi.lib",
            "/DEFAULTLIB:psapi.lib",
            "/FORCE:MULTIPLE",  # FIXME: handles the current duplicate symbols because of labjack lib. temp workaround
        ],
        "//conditions:default": [
            "-lm",
            "-ldl",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//driver/daemon",
        "//driver/rack",
        "//x/cpp/breaker",
        "//x/cpp/xlog",
        "//x/cpp/xshutdown",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ] + select({
        "@platforms//os:windows": ["@mbedtls_win"],
        "@platforms//os:linux": ["@mbedtls_linux"],
        "@platforms//os:macos": ["@mbedtls_macos"],
    }),
)
