cc_library(
    name = "cmd",
    srcs = [
        "clear.cpp",
        "exec.cpp",
        "login.cpp",
        "service.cpp",
        "start.cpp",
        "version.cpp",
        "//core/pkg/version",
    ],
    hdrs = ["cmd.h"],
    linkopts = select({
        "@platforms//os:windows": [
            "/DEFAULTLIB:ws2_32.lib",
            "/DEFAULTLIB:iphlpapi.lib",
            "/DEFAULTLIB:psapi.lib",
        ],
        "//conditions:default": [
            "-lm",
            "-ldl",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//driver/daemon",
        "//driver/rack",
        "//x/cpp/args",
        "//x/cpp/breaker",
        "//x/cpp/cli",
        "//x/cpp/log",
        "//x/cpp/shutdown",
        "@gflags",
        "@glog",
    ],
)
