cc_library(
    name = "config",
    srcs = [
        "config.cpp",
        "config.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/ni",
        "//driver/opc",
        "//driver/sequence",
        "//x/cpp/config",
        "@com_github_google_glog//:glog",
    ] + select({
        "@platforms//os:windows": [
            "//driver/labjack",
        ],
        "//conditions:default": [
        ],
    }),
)

cc_test(
    name = "config_test",
    srcs = [
        "config_test.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//driver/config",
        "@com_google_googletest//:gtest_main",
    ],
)
