load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "control",
    hdrs = [
        "state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//x/cpp/control",
        "//x/cpp/telem",
    ],
)

cc_test(
    name = "control_test",
    srcs = ["state_test.cpp"],
    deps = [
        "//driver/control",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
