load("@rules_cc//cc:cc_library.bzl", "cc_library")

config_setting(
    name = "nilinuxrt",
    values = {
        "define": "platform=nilinuxrt",
    },
)

cc_library(
    name = "daemon",
    srcs = select({
        ":nilinuxrt": ["daemon_nilinuxrt.cpp"],
        "@platforms//os:linux": ["daemon_linux.cpp"],
        "//conditions:default": ["daemon_noop.cpp"],
    }),
    hdrs = ["daemon.h"],
    linkopts = select({
        ":nilinuxrt": [],
        "@platforms//os:linux": [
            "-lsystemd",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//x/cpp/xerrors",
        "//x/cpp/xos",
        "//x/cpp/xthread",
        "@glog",
    ],
)
