cc_library(
    name = "driver",
    srcs = [
        "driver.cpp",
        "heartbeat.cpp",
        "task_manager.cpp",
    ],
    hdrs = [
        "driver.h",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++17"],
        "//conditions:default": [],
    }),
    deps = [
        "//client/cpp/synnax",
        "//driver/driver/breaker",
        "//driver/driver/config",
        "//driver/driver/task",
        "@com_github_google_glog//:glog",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "test_driver",
    size = "small",
    srcs = [
        "task_context_test.cpp",
        "task_manager_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++17"],
        "//conditions:default": [],
    }),
    deps = [
        "//driver/driver",
        "//driver/driver/testutil",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "driver_main",
    srcs = ["main.cpp"],
    copts = select({
        "@platforms//os:windows": ["/std:c++17"],
        "//conditions:default": [],
    }),
    deps = [
        "//driver/driver",
        "//driver/driver/breaker",
        "//driver/driver/opcua",
        "//driver/driver/task",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ],
)
