cc_library(
    name = "errors",
    hdrs = ["errors.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//x/cpp/lib",
        "//x/cpp/errors",
    ],
)

cc_test(
    name = "errors_test",
    srcs = ["errors_test.cpp"],
    deps = [
        ":errors",
        "//driver/labjack:labjack_errors",
        "//driver/ni:ni_errors",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
