load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "errors",
    hdrs = ["errors.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//x/cpp/xerrors",
        "//x/cpp/xlib",
    ],
)

cc_test(
    name = "errors_test",
    srcs = ["errors_test.cpp"],
    deps = [
        ":errors",
        "//driver/labjack:labjack_errors",
        "//driver/ni:ni_errors",
        "//x/cpp/xtest",
        "@googletest//:gtest_main",
    ],
)
