cc_library(
    name = "errors",
    hdrs = ["errors.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//x/cpp/errors",
        "//x/cpp/lib",
    ],
)

cc_test(
    name = "errors_test",
    srcs = ["errors_test.cpp"],
    deps = [
        "//driver/errors",
        "//driver/labjack/ljm",
        "//driver/ni/daqmx",
        "//driver/ni/errors",
        "//driver/ni/syscfg",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
