cc_library(
    name = "ethercat",
    srcs = [
        "channels.h",
        "cyclic_engine.cpp",
        "factory.cpp",
        "read_task.h",
        "write_task.h",
    ],
    hdrs = [
        "cyclic_engine.h",
        "ethercat.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/errors",
        "//driver/ethercat/errors",
        "//driver/ethercat/master",
        "//driver/ethercat/mock",
        "//driver/ethercat/soem",
        "//driver/pipeline",
        "//driver/task",
        "//driver/task/common",
        "//x/cpp/breaker",
        "//x/cpp/telem",
        "//x/cpp/xerrors",
        "//x/cpp/xjson",
        "@glog",
    ],
)

cc_test(
    name = "ethercat_test",
    srcs = [
        "cyclic_engine_test.cpp",
        "read_task_test.cpp",
        "write_task_test.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp/testutil",
        "//driver/ethercat",
        "//driver/ethercat/mock",
        "//driver/pipeline/mock",
        "//x/cpp/xtest",
        "@googletest//:gtest_main",
    ],
)
