cc_library(
    name = "heartbeat",
    srcs = [
        "heartbeat.cpp",
    ],
    hdrs = [
        "heartbeat.h",
    ],
    copts = ["/std:c++20"],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/breaker",
        "//freighter/cpp:freighter",
    ],
)

cc_test(
    name = "heartbeat_test",
    srcs = [
        "heartbeat_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],q
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":heartbeat",
        "//driver/testutil",
        "@com_google_googletest//:gtest_main",
    ],
)
