cc_library(
    name = "heartbeat",
    hdrs = [
        "heartbeat.h",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "@platforms//os:linux": ["-std=c++17"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/pipeline",
        "//driver/task",
        "//freighter/cpp:freighter",
        "//x/cpp/breaker",
        "//x/cpp/loop",
    ],
)

cc_test(
    name = "heartbeat_test",
    srcs = [
        "heartbeat_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "@platforms//os:linux": ["-std=c++17"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//driver/heartbeat",
        "//driver/testutil",
        "@com_google_googletest//:gtest_main",
    ],
)
