load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "http",
    srcs = [
        "factory.cpp",
        "http.h",
        "scan_task.cpp",
        "scan_task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//driver/common",
        "//driver/errors",
        "//driver/http/device",
        "//driver/http/errors",
        "//driver/http/types",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/loop",
        "@glog",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "scan_task_test",
    srcs = ["scan_task_test.cpp"],
    linkstatic = True,
    deps = [
        ":http",
        "//driver/http/mock",
        "//x/cpp/defer",
        "//x/cpp/test",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
    ],
)
