cc_library(
    name = "labjack",
    srcs = [
        "factory.cpp",
    ],
    hdrs = [
        "labjack.h",
        "read_task.h",
        "scan_task.h",
        "write_task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/errors",
        "//driver/labjack/device",
        "//driver/labjack/ljm",
        "//driver/pipeline",
        "//driver/task",
        "//driver/task/common",
        "//driver/transform",
        "//x/cpp/breaker",
        "//x/cpp/loop",
        "//x/cpp/xjson",
        "@glog",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "labjack_test",
    srcs = [
        "read_task_test.cpp",
    ],
    deps = [
        "//client/cpp/testutil",
        "//driver/labjack",
        "//x/cpp/xtest",
        "@googletest//:gtest_main",
    ],
)
