cc_library(
    name = "labjack_errors",
    hdrs = ["errors.h"],
    visibility = ["//visibility:public"],
    deps = ["//driver/errors"],
)

cc_library(
    name = "labjack",
    srcs = [
        "factory.cpp",
    ],
    hdrs = [
        "labjack.h",
        "read_task.h",
        "scan_task.h",
        "write_task.h",
    ],
   copts = select({
        "@platforms//os:windows": [
            "/DWIN32_LEAN_AND_MEAN",
            "/DNOMINMAX",
            "/D_WIN32_WINNT=0x0601",  # Target Windows 7 or later
            "/D_WINSOCK_DEPRECATED_NO_WARNINGS",
            "/D_CRT_SECURE_NO_WARNINGS",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:windows": ["/DEFAULTLIB:ws2_32.lib"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":labjack_errors",
        "//client/cpp:synnax",
        "//driver/labjack/device",
        "//driver/labjack/ljm",
        "//driver/pipeline",
        "//driver/task",
        "//driver/task/common",
        "//driver/transform",
        "//x/cpp/breaker",
        "//x/cpp/loop",
        "//x/cpp/json",
        "@glog",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "labjack_test",
    srcs = [
        "read_task_test.cpp",
    ],
    deps = [
        "//client/cpp/testutil",
        "//driver/labjack",
        "//x/cpp/xtest",
        "@googletest//:gtest_main",
    ],
)
