cc_library(
    name = "loop",
    hdrs = ["loop.h"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "@com_github_google_glog//:glog",
    ],
)
