cc_library(
    name = "loop",
    hdrs = ["loop.h"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/breaker",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "loop_test",
    size = "small",
    srcs = [
        "loop_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    deps = [
        "//driver/loop",
        "@com_google_googletest//:gtest_main",
    ],
)
