cc_library(
    name = "meminfo",
    srcs = select({
        "@bazel_tools//src/conditions:windows": ["meminfo_windows.cpp"],
        "@bazel_tools//src/conditions:darwin": ["meminfo_macos.cpp"],
        "//conditions:default": ["meminfo_linux.cpp"],
    }),
    hdrs = ["meminfo.h"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/DWINDOWS"],
        "@bazel_tools//src/conditions:darwin": ["-DMACOS"],
        "//conditions:default": ["-DLINUX"],
    }),
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["/DEFAULTLIB:psapi.lib"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        "@bazel_tools//src/conditions:windows": [
            "//driver/pipeline",
            "//driver/task",
        ],
        "//conditions:default": [
            "//driver/pipeline",
            "//driver/task",
        ],
    }),
)
