cc_library(
    name = "ni",
    srcs = [
        "factory.cpp",
        "scan_task.cpp",
    ],
    hdrs = [
        "ni.h",
        "read_task.h",
        "scan_task.h",
        "write_task.h",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/ni/channel",
        "//driver/ni/daqmx",
        "//driver/ni/hardware",
        "//driver/ni/syscfg",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/breaker",
        "//x/cpp/loop",
        "//x/cpp/xjson",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "ni_test",
    srcs = [
        "read_task_test.cpp",
        "write_task_test.cpp",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default": [],
    }),
    tags = ["hardware"],
    deps = [
        "ni",
        "//client/cpp/testutil",
        "//driver/pipeline/mock",
        "//x/cpp/xtest",
        "@com_google_googletest//:gtest_main",
    ],
)
