load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "ni_errors",
    hdrs = ["errors.h"],
    visibility = ["//visibility:public"],
    deps = ["//driver/errors"],
)

cc_library(
    name = "ni",
    srcs = [
        "factory.cpp",
        "scan_task.cpp",
    ],
    hdrs = [
        "ni.h",
        "read_task.h",
        "scan_task.h",
        "write_task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ni_errors",
        "//client/cpp:synnax",
        "//driver/ni/channel",
        "//driver/ni/daqmx",
        "//driver/ni/hardware",
        "//driver/ni/syscfg",
        "//driver/pipeline",
        "//driver/task",
        "//driver/task/common",
        "//x/cpp/breaker",
        "//x/cpp/loop",
        "//x/cpp/xjson",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "ni_test",
    srcs = [
        "read_task_test.cpp",
        "scan_task_test.cpp",
        "write_task_test.cpp",
    ],
    deps = [
        "//client/cpp/testutil",
        "//driver/ni",
        "//driver/pipeline/mock",
        "//x/cpp/xtest",
        "@googletest//:gtest_main",
    ],
)
