cc_library(
    name = "ni",
    srcs = [
        "factory.cpp",
        "scan_task.cpp",
    ],
    hdrs = [
        "ni.h",
        "read_task.h",
        "scan_task.h",
        "write_task.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//client/cpp:synnax",
        "//driver/common",
        "//driver/ni/channel",
        "//driver/ni/daqmx",
        "//driver/ni/errors",
        "//driver/ni/hardware",
        "//driver/ni/syscfg",
        "//driver/pipeline",
        "//driver/task",
        "//x/cpp/breaker",
        "//x/cpp/json",
        "//x/cpp/loop",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "ni_test",
    srcs = [
        "read_task_test.cpp",
        "scan_task_test.cpp",
        "write_task_test.cpp",
    ],
    deps = [
        "//client/cpp/testutil",
        "//driver/ni",
        "//driver/pipeline/mock",
        "//x/cpp/test",
        "@googletest//:gtest_main",
    ],
)
